Fix scrollbar hide icons in IE (ticket 1613).

--- a/se-web-ui/src/main/resources/catalog/views/swe/less/gn_search_swe.less
+++ b/se-web-ui/src/main/resources/catalog/views/swe/less/gn_search_swe.less
@@ -1089,6 +1089,7 @@ html, body {
 // header
 body {
   padding-top: 60px;
+  -ms-overflow-style:scrollbar;
 }
 .header-cont {
   position: fixed;
